Changed the header to be separated with Django "extends"

--- a/appBTD6introduction/templates/alteracoes.html
+++ b/appBTD6introduction/templates/alteracoes.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
+{% extends "header.html" %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Eduardo Eugênio de Souza</title>
-
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'style.css' %}">
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-</head>
-
+{% block content %}
 <body>
   
   <h4 style="margin-bottom: 80px;">Se você deseja alterar algum conteúdo no site, escolha dentre estas opções:</h4>
@@ -34,3 +22,4 @@
   </div>
 
 </body>
+{% endblock %}
