--- a/appBTD6introduction/templates/confirmacao.html
+++ b/appBTD6introduction/templates/confirmacao.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
+{% extends "header.html" %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Eduardo Eugênio de Souza</title>
-
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'style.css' %}">
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-</head>
-
+{% block content %}
 
 <body>
   Você tem certeza que deseja remover "{{ item.titulo }}"?
@@ -23,3 +11,4 @@
     <input type="submit" value="Não">
   </form>
 </body>
+{% endblock %}
