--- a/appBTD6introduction/templates/form.html
+++ b/appBTD6introduction/templates/form.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
+{% extends "header.html" %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Eduardo Eugênio de Souza</title>
-
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'style.css' %}">
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-</head>
+{% block content %}
 
 <body>
   <div style="padding-top:200px; padding-bottom:20px">
@@ -23,3 +12,4 @@
   </div>
   <a href="https://atividade-04-formularios-no-django-duduardo64.eng4021-20232.repl.co/">Voltar a página inicial</a>
 </body>
+{% endblock %}
