--- a/appBTD6introduction/templates/form.html
+++ b/appBTD6introduction/templates/form.html
@@ -3,13 +3,14 @@
 {% block content %}
 
 <body>
-  <div style="padding-top:200px; padding-bottom:20px">
+  <div style="padding-top:150px; padding-bottom:20px">
+  <h2 style="padding-bottom:20px">{{ frase }}</h2>
   <form action="" method="post">
       {% csrf_token %}
       {{ form.as_ul }}
       <input type="submit" value="Enviar">
   </form>
   </div>
-  <a href="https://atividade-04-formularios-no-django-duduardo64.eng4021-20232.repl.co/">Voltar a página inicial</a>
+  <a href="/">Voltar a página inicial</a>
 </body>
 {% endblock %}
