limpei muito do html original, e adicionei funcinalidade de login/logout, limitando acesso à usuários sem login. Falta: esqueceu senha, CRUD do user e navegação em sidebar.

--- a/appBTD6introduction/static/style.css
+++ b/appBTD6introduction/static/style.css
@@ -34,3 +34,21 @@ table, th, td {
 a {
   color: #ffb638;
 }
+
+a:hover {
+  color: #ff6038;
+}
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #3b0e67;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.main {
+  margin-left:200px;
+}
