--- a/appBTD6introduction/templates/alteracoes.html
+++ b/appBTD6introduction/templates/alteracoes.html
@@ -21,5 +21,8 @@
     <a href="formHistoria/">Alterar alguma história</a>
   </div>
 
+  <div>
+    <a href="{% url 'home' %}">Voltar a página inicial</a>
+  </div>
 </body>
 {% endblock %}
