--- a/appBTD6introduction/templates/confirmacao.html
+++ b/appBTD6introduction/templates/confirmacao.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<body>
+<body style="padding-top:100px;">
   Você tem certeza que deseja remover "{{ item.titulo }}"?
 
   <form method="post">
