--- a/appBTD6introduction/templates/form.html
+++ b/appBTD6introduction/templates/form.html
@@ -11,6 +11,6 @@
       <input type="submit" value="Enviar">
   </form>
   </div>
-  <a href="/">Voltar a página inicial</a>
+  <a href="{% url 'home' %}alterar">Voltar a página anterior</a>
 </body>
 {% endblock %}
