--- a/appBTD6introduction/templates/todasHistorias.html
+++ b/appBTD6introduction/templates/todasHistorias.html
@@ -31,7 +31,7 @@
 
 
   <div style="margin-top: 100px;">
-  <a href="https://atividade-04-formularios-no-django-duduardo64.eng4021-20232.repl.co/">Voltar a página inicial</a>
+  <a href="{% url 'home' %}">Voltar a página inicial</a>
   </div>
 </body>
 {% endblock %}
