--- a/appBTD6introduction/templates/registrar.html
+++ b/appBTD6introduction/templates/registrar.html
@@ -6,19 +6,20 @@
   <h2>{{ frase }}</h2>
   
   <form method="post">
+    {% csrf_token %}
     <div>
       <label>Nome de usuário:</label>
-      <input type="text">
+      <input type="text" name="username">
     </div>
     <div>
       <label>E-mail:</label>
-      <input type="email">
+      <input type="email" name="email">
     </div>
     <div>
       <label>Senha:</label>
-      <input type="password">
+      <input type="password" name="senha">
     </div>
 
-    <input type="submit" value="Registrar">
+    <input type="submit" value="{{ botao }}">
 </body>
 {% endblock %}
