--- a/appBTD6introduction/templates/todosGeneros.html
+++ b/appBTD6introduction/templates/todosGeneros.html
@@ -9,7 +9,7 @@
   <ul style="margin-top: 150px;">
     {% for genero in generos %}
       <li>{{genero.titulo}}
-        <a href="edit/{{ genero.id }}"> Alterar </a>
+        <a href="edit/{{ genero.id }}"> Alterar</a> |
         <a href="remove/{{ genero.id }}"> Remover </a>
       </li>
     {% endfor %}
