--- a/appBTD6introduction/templates/form.html
+++ b/appBTD6introduction/templates/form.html
@@ -11,6 +11,10 @@
       <input type="submit" value="Enviar">
   </form>
   </div>
-  <a href="{% url 'home' %}alterar">Voltar a página anterior</a>
+  {% if usuario %}
+    <p>Para alterar sua senha siga este link <a href="{% url 'password_reset' %}">aqui</a></p>
+  {% else %}
+    <a href="{% url 'home' %}alterar">Voltar a página anterior</a>
+  {% endif %}
 </body>
 {% endblock %}
