--- a/appBTD6introduction/templates/todasHistorias.html
+++ b/appBTD6introduction/templates/todasHistorias.html
@@ -6,7 +6,7 @@
 
   <h3>Favor não alterar estas histórias:</h3>
 
-  <ol style="margin-top: 100px;">
+  <ol style="margin-top: 100px;margin-bottom:50px;">
     {% for frase in historiasFixas %}
       <li>{{frase.titulo}}
         | <a href="edit/{{ historiasFixas.id }}">  Alterar</a>
@@ -28,10 +28,6 @@
       </li>
     {% endfor %}
   </ol>
-
-
-  <div style="margin-top: 100px;">
-  <a href="{% url 'home' %}">Voltar a página inicial</a>
-  </div>
+  <a href="{% url 'home' %}alterar">Voltar a página anterior</a>
 </body>
 {% endblock %}
